--- a/Site/Login e cadastro/cadastro.html
+++ b/Site/Login e cadastro/cadastro.html
@@ -7,6 +7,28 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <header>
+    <a href="">
+      <img src="assets/imgs/logo sem fundo 1.svg" alt="">
+    </a>
+    <nav>
+      <div class="nav_um">
+        <ul>
+          <li><a href="">EXPLORER</a></li>
+          <li><a href="">NEW POST</a></li>
+        </ul>
+      </div>
+
+      <div class="nav_dois">
+        <ul>
+          <li><a href="">CADASTRAR</a></li>
+          <li><a href="">LOGIN</a></li>
+        </ul>
+      </div>
+    </nav>
+
+  </header>
+  
   <div class="container">
     <div class="card">
       <h1>
