Inicio da construção da API do meu projeto individual

--- a/Site/Institucional/newpost.html
+++ b/Site/Institucional/newpost.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>New Post - SONAR</title>
     <link rel="stylesheet" href="css/styles_newpost.css">
 </head>
 
@@ -61,5 +61,4 @@
         </div>
     </div>
 </body>
-
 </html>
