--- a/Site/Institucional/index.html
+++ b/Site/Institucional/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Home - SONAR</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -69,5 +69,4 @@
     </div>
   </footer>
 </body>
-
 </html>
