Alterações no backend e front-end de todas as páginas e adição da página perfil

--- a/Minha API/public/index.html
+++ b/Minha API/public/index.html
@@ -6,25 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home - SONAR</title>
   <link rel="stylesheet" href="css/styles_home.css">
+  <link rel="shortcut icon" href="assets/icon/favicon2.ico" type="image/x-icon">
 </head>
 
 <body>
   <header>
-    <a href="">
+    <a href="index.html">
       <img src="assets/imgs/logo sem fundo 1.svg" alt="">
     </a>
     <nav>
       <div class="nav_um">
         <ul>
-          <li><a href="">EXPLORER</a></li>
-          <li><a href="">NEW POST</a></li>
+          <li><a href="login.html">
+            EXPLORER
+          </a></li>
+          <li><a href="login.html">
+            NEW POST
+          </a></li>
         </ul>
       </div>
-
       <div class="nav_dois">
         <ul>
-          <li><a href="cadastro.html">CADASTRAR</a></li>
-          <li><a href="login.html">LOGIN</a></li>
+          <li><a href="cadastro.html">
+            CADASTRAR
+          </a></li>
+          <li><a href="login.html">
+            LOGIN
+          </a></li>
         </ul>
       </div>
     </nav>
