--- a/Minha API/public/cadastro.html
+++ b/Minha API/public/cadastro.html
@@ -6,25 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro - SONAR</title>
   <link rel="stylesheet" href="css/styles_login_cadastro.css">
+  <link rel="shortcut icon" href="assets/icon/favicon2.ico" type="image/x-icon">
 </head>
 
 <body>
   <header>
-    <a href="">
+    <a href="index.html">
       <img src="assets/imgs/logo sem fundo 1.svg" alt="">
     </a>
     <nav>
       <div class="nav_um">
         <ul>
-          <li><a href="">EXPLORER</a></li>
-          <li><a href="">NEW POST</a></li>
+          <li><a href="cadastro.html">
+            CADASTRAR
+          </a></li>
         </ul>
       </div>
 
       <div class="nav_dois">
         <ul>
-          <li><a href="">CADASTRAR</a></li>
-          <li><a href="">LOGIN</a></li>
+          <li><a href="login.html">
+            LOGIN
+          </a></li>
         </ul>
       </div>
     </nav>
@@ -53,6 +56,11 @@
         <input type="password" id="input_confirmar_senha">
       </div>
       <button onclick="cadastrar()">Cadastrar</button>
+      <div>Já tem uma conta?
+      <a href="login.html">
+        Clique aqui.
+      </a>
+    </div>
     </div>
   </div>
 </body>
