--- a/Minha API/public/site/newpost.html
+++ b/Minha API/public/site/newpost.html
@@ -6,23 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Post - SONAR</title>
     <link rel="stylesheet" href="css/styles_newpost.css">
+    <link rel="shortcut icon" href="assets/icon/favicon2.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <a href="">
+        <a href="../index.html">
             <img src="assets/imgs/logo sem fundo 1.svg" alt="">
         </a>
         <nav>
             <div class="nav_um">
                 <ul>
-                    <li><a href="">EXPLORER</a></li>
-                    <li><a href="">NEW POST</a></li>
+                    <li><a href="explorer.html">EXPLORER</a></li>
+                    <li><a href="newpost.html">NEW POST</a></li>
                 </ul>
             </div>
 
             <div class="nav_dois">
-                    nome user
+                nome user
             </div>
         </nav>
 
@@ -30,35 +31,52 @@
 
     <div class="container">
         <div class="card">
+
             <div class="titulo">
                 Criar um novo post
             </div>
+
             <div class="add_arquivo">
+
                 <div class="imagem">
                     <img src="assets/imgs/add imagem.svg" alt="">
-                
-                <div class="txt_add_arquivo">
-                    Adicione arquivos aqui
+
+                    <div class="txt_add_arquivo">
+                        Adicione arquivos aqui
+                    </div>
+
                 </div>
-            </div>
-                <div class="botao_add">
-                    <button onclick="add_arquivos()">
-                        Selecionar arquivo
-                    </button>
-                </div>
+
+                <!-- o label ele é uma etiqueta para a input que está invisivel
+                 e o span é o texto dessas etiqueta -->
+                <label class="botao_add" for="input_imagem">
+                    <span>Selecione o seu arquivo</span>
+                    <input type="file" accept="image/*" id="input_imagem">
+                </label>
+
                 <div class="desc">
                     <div class="txt_desc">
                         descrição
                     </div>
-                    <textarea name="descrição" id="input_desc"></textarea>
+                    <textarea id="input_desc"></textarea>
                 </div>
+
             </div>
+
         </div>
+
         <div class="botao_enviar">
             <button onclick="enviar()">
                 ENVIAR
             </button>
         </div>
+
     </div>
 </body>
+
 </html>
+<script>
+    function enviar() {
+        
+    }
+</script>
