--- a/Minha API/public/cadastro.html
+++ b/Minha API/public/cadastro.html
@@ -18,16 +18,16 @@
       <div class="nav_um">
         <ul>
           <li><a href="cadastro.html">
-            CADASTRAR
-          </a></li>
+              CADASTRAR
+            </a></li>
         </ul>
       </div>
 
       <div class="nav_dois">
         <ul>
           <li><a href="login.html">
-            LOGIN
-          </a></li>
+              LOGIN
+            </a></li>
         </ul>
       </div>
     </nav>
@@ -55,12 +55,13 @@
         <div class="txt">confirmar senha</div>
         <input type="password" id="input_confirmar_senha">
       </div>
+      <div id="div_erro"></div>
       <button onclick="cadastrar()">Cadastrar</button>
       <div>Já tem uma conta?
-      <a href="login.html">
-        Clique aqui.
-      </a>
-    </div>
+        <a href="login.html">
+          Clique aqui.
+        </a>
+      </div>
     </div>
   </div>
 </body>
@@ -73,19 +74,58 @@
     var emailVar = input_email.value;
     var senhaVar = input_senha.value;
     var confirmar_senhaVar = input_confirmar_senha.value;
+    var mensagem_erro = ``
 
-    // Vá para routes.usuario
-    fetch("/usuario/cadastrar", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json",
-      },
-      body: JSON.stringify({
-        // Criação dos objetos com o valor das inputs
-        nomeServer: nomeVar,
-        emailServer: emailVar,
-        senhaServer: senhaVar
+    if (nomeVar == `` ||
+      emailVar == `` ||
+      senhaVar == `` ||
+      confirmar_senhaVar == ``
+    ) {
+      mensagem_erro = `Preencha todos os campos para realizar o cadastro`
+    } else if (!emailVar.endsWith(".com") ||
+      emailVar.indexOf("@") == -1) {
+      mensagem_erro = `Email incorreto`
+    } else if (senhaVar.length < 8) {
+      mensagem_erro = `A senha deve ser maior do que 8 dígitos`
+    } else if (senhaVar.indexOf("!") &&
+      senhaVar.indexOf("@") == -1 &&
+      senhaVar.indexOf("#") == -1 &&
+      senhaVar.indexOf("$") == -1 &&
+      senhaVar.indexOf("%") == -1 &&
+      senhaVar.indexOf("&") == -1 &&
+      senhaVar.indexOf("*") == -1 &&
+      senhaVar.indexOf("?") == -1 &&
+      senhaVar.indexOf(";") == -1 &&
+      senhaVar.indexOf("|") == -1 &&
+      senhaVar.indexOf("/") == -1 &&
+      senhaVar.indexOf(":") == -1 &&
+      senhaVar.indexOf("-") == -1 &&
+      senhaVar.indexOf("_") == -1 &&
+      senhaVar.indexOf("+") == -1 &&
+      senhaVar.indexOf("=") == -1 &&
+      senhaVar.indexOf("§") == -1) {
+      mensagem_erro = `Sua senha de conter pelo menos um caractér especial`
+      console.log(`Falta um digito especial`)
+    } else if (senhaVar != confirmar_senhaVar) {
+      mensagem_erro = `Senhas incoerentes`
+    } else {
+      console.log(`Cheguei na função de inserir`)
+
+      // Vá para routes.usuario
+      fetch("/usuario/cadastrar", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({
+          // Criação dos objetos com o valor das inputs
+          nomeServer: nomeVar,
+          emailServer: emailVar,
+          senhaServer: senhaVar
+        })
       })
-    })
+      window.location = "login.html"
+    }
+    div_erro.innerHTML = mensagem_erro
   }
 </script>
