--- a/Minha API/public/cadastro.html
+++ b/Minha API/public/cadastro.html
@@ -69,69 +69,97 @@
 </html>
 <script>
   function cadastrar() {
-    // receber valores das inputs
+
     var nomeVar = input_nome_user.value;
     var emailVar = input_email.value;
     var senhaVar = input_senha.value;
     var confirmar_senhaVar = input_confirmar_senha.value;
     var mensagem_erro = ``
+    var nome_encontrado = false
 
-    if (nomeVar == `` ||
-      emailVar == `` ||
-      senhaVar == `` ||
-      confirmar_senhaVar == ``
-    ) {
-      mensagem_erro = `Preencha todos os campos para realizar o cadastro`
-    } else if (!emailVar.endsWith(".com") ||
-      emailVar.indexOf("@") == -1) {
-      mensagem_erro = `Email incorreto`
-    } else if (senhaVar.length < 8) {
-      mensagem_erro = `A senha deve ser maior do que 8 dígitos`
-    } else if (senhaVar.indexOf("!") &&
-      senhaVar.indexOf("@") == -1 &&
-      senhaVar.indexOf("#") == -1 &&
-      senhaVar.indexOf("$") == -1 &&
-      senhaVar.indexOf("%") == -1 &&
-      senhaVar.indexOf("&") == -1 &&
-      senhaVar.indexOf("*") == -1 &&
-      senhaVar.indexOf("?") == -1 &&
-      senhaVar.indexOf(";") == -1 &&
-      senhaVar.indexOf("|") == -1 &&
-      senhaVar.indexOf("/") == -1 &&
-      senhaVar.indexOf(":") == -1 &&
-      senhaVar.indexOf("-") == -1 &&
-      senhaVar.indexOf("_") == -1 &&
-      senhaVar.indexOf("+") == -1 &&
-      senhaVar.indexOf("=") == -1 &&
-      senhaVar.indexOf("§") == -1) {
-      mensagem_erro = `Sua senha de conter pelo menos um caractér especial`
-      console.log(`Falta um digito especial`)
-    } else if (senhaVar != confirmar_senhaVar) {
-      mensagem_erro = `Senhas incoerentes`
-    } else {
-      console.log(`Cheguei na função de inserir`)
-      
-      fetch("/usuario/cadastrar", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify({
-          nomeServer: nomeVar,
-          emailServer: emailVar,
-          senhaServer: senhaVar
-        })
-      }).then(res => {
-        if (!res.ok) {
-          throw new Error("Erro ao cadastrar");
+    fetch("usuario/listarNome")
+      .then(res => res.json())
+      .then(lista => {
+
+        console.log("lista de nomes:", lista);
+        for (var i = 0; i < lista.length; i++) {
+          var lista_nome = lista[i];
+
+          if (lista_nome.nome === nomeVar) {
+            nome_encontrado = true;
+            break;
+          }
         }
-        window.location = "login.html";
-      }).catch(err => {
-        console.error("Erro no cadastro:", err);
-        div_erro.innerHTML = `Email já está em uso`;
-      });
 
-    }
+        if (nome_encontrado) {
+          console.log("Nome já existe, não pode cadastrar");
+          throw new Error("Erro ao cadastrar, nome já existe");
+        } else {
+          console.log("Cai no else")
+
+          if (nomeVar == `` ||
+            emailVar == `` ||
+            senhaVar == `` ||
+            confirmar_senhaVar == ``
+          ) {
+            mensagem_erro = `Preencha todos os campos para realizar o cadastro`
+          } else if (!emailVar.endsWith(".com") ||
+            emailVar.indexOf("@") == -1) {
+            mensagem_erro = `Email incorreto`
+          } else if (senhaVar.length < 8) {
+            mensagem_erro = `A senha deve ser maior do que 8 dígitos`
+          } else if (senhaVar.indexOf("!") &&
+            senhaVar.indexOf("@") == -1 &&
+            senhaVar.indexOf("#") == -1 &&
+            senhaVar.indexOf("$") == -1 &&
+            senhaVar.indexOf("%") == -1 &&
+            senhaVar.indexOf("&") == -1 &&
+            senhaVar.indexOf("*") == -1 &&
+            senhaVar.indexOf("?") == -1 &&
+            senhaVar.indexOf(";") == -1 &&
+            senhaVar.indexOf("|") == -1 &&
+            senhaVar.indexOf("/") == -1 &&
+            senhaVar.indexOf(":") == -1 &&
+            senhaVar.indexOf("-") == -1 &&
+            senhaVar.indexOf("_") == -1 &&
+            senhaVar.indexOf("+") == -1 &&
+            senhaVar.indexOf("=") == -1 &&
+            senhaVar.indexOf("§") == -1) {
+            mensagem_erro = `Sua senha de conter pelo menos um caractér especial`
+            console.log(`Falta um digito especial`)
+          } else if (senhaVar != confirmar_senhaVar) {
+            mensagem_erro = `Senhas incoerentes`
+          } else {
+            console.log(`Cheguei na função de inserir`)
+
+            fetch("/usuario/cadastrar", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({
+                nomeServer: nomeVar,
+                emailServer: emailVar,
+                senhaServer: senhaVar
+              })
+            }).then(res => {
+              if (!res.ok) {
+                throw new Error("Erro ao cadastrar")
+              }
+              window.location = "login.html"
+            }).catch(err => {
+              console.error("Erro no cadastro:", err)
+              div_erro.innerHTML = `Email já está em uso`
+            })
+
+          }
+        }
+      }).catch(err => {
+        console.error("Erro ao cadastrar, nome já existe", err)
+        div_erro.innerHTML = `Nome já está em uso, use outro nome`
+      })
+
+
     div_erro.innerHTML = mensagem_erro
   }
 </script>
