--- a/Minha API/public/site/perfil.html
+++ b/Minha API/public/site/perfil.html
@@ -263,10 +263,10 @@
         var descricaoUser = sessionStorage.DESCRICAO_USUARIO
         div_editar.innerHTML = `
         <input type="text" id="input_nova_desc" value="${descricaoUser}">
-        <button onclick="update()">ENVIAR</button>`
+        <button onclick="enviarDescNova()">ENVIAR</button>`
     }
 
-    function update() {
+    function enviarDescNova() {
         var novaDesc = input_nova_desc.value
         var idUsuario = sessionStorage.ID_USUARIO
 
@@ -311,7 +311,7 @@
                     console.log(post_da_curtida)
 
                     var div_cond_curtida = document.getElementById(`condCurtida${post_da_curtida}`)
-                    div_cond_curtida.innerHTML = `<img src="assets/imgs/coraação vermelho.png" alt="">`
+                    div_cond_curtida.innerHTML = `<img src="assets/imgs/coração vermelho.png" alt="">`
                 }
             })
             .catch((erro) => {
@@ -329,7 +329,7 @@
         var div_cond_curtida = document.getElementById(`condCurtida${idPost}`)
 
         // Me responde um valor booleano = true ou false para eu verificar se está ou não curtido
-        var curtida_coracao_vermelho = div_cond_curtida.innerHTML.includes(`<img src="assets/imgs/coraação vermelho.png" alt="">`)
+        var curtida_coracao_vermelho = div_cond_curtida.innerHTML.includes(`<img src="assets/imgs/coração vermelho.png" alt="">`)
 
         // Se for true
         if (curtida_coracao_vermelho) {
